ajustes finais (CSS em todas as páginas)

--- a/doces.html
+++ b/doces.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cardápio</title>
+    <title>Cardápio - Doces</title>
     <link rel="stylesheet" href="style.css"> 
     <script defer src="app.js"></script>
 </head>
@@ -17,6 +17,7 @@
             <li><a href="quejios.html">Queijos</a></li>
             <li><a href="doces.html">Doces</a></li>
             <li><a href="outros.html">Outros</a></li>
+            <li><a href="https://api.whatsapp.com/send/?phone=5548988080761&text&type=phone_number&app_absent=0" target="_blank" rel="noopener noreferrer">Contato</a></li>
           </ul>
         </nav>
       </header>
@@ -25,81 +26,82 @@
             Doces
         </h1>
 
-        <div class="card_produto">
-            <img src="pictures/exemplo_queijo.jpg" class="foto_produto">
-            <div>
-                <h2 class="nome_produto">
-                    Doce Talhado
-                </h2>
-                <p class="peso">
-                    Peso: 800g
-                </p>
-                <p class="preço">
-                    R$35,00
-                </p>
+        <div class="produtos">
+            <div class="card_produto">
+                <img src="pictures/exemplo_queijo.jpg" class="foto_produto">
+                <div>
+                    <h2 class="nome_produto">
+                        Doce Talhado
+                    </h2>
+                    <p class="peso">
+                        Peso: 800g
+                    </p>
+                    <p class="preço">
+                        R$35,00
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class="card_produto">
-            <img src="pictures/exemplo_queijo.jpg" class="foto_produto">
-            <div>
-                <h2 class="nome_produto">
-                    Figo Caramelizado
-                </h2>
-                <p class="peso">
-                    Peso: 600g
-                </p>
-                <p class="preço">
-                    R$?
-                </p>
+            <div class="card_produto">
+                <img src="pictures/exemplo_queijo.jpg" class="foto_produto">
+                <div>
+                    <h2 class="nome_produto">
+                        Figo Caramelizado
+                    </h2>
+                    <p class="peso">
+                        Peso: 600g
+                    </p>
+                    <p class="preço">
+                        R$?
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class="card_produto">
-            <img src="pictures/exemplo_queijo.jpg" class="foto_produto">
-            <div>
-                <h2 class="nome_produto">
-                    Azeite de Abacate
-                </h2>
-                <p class="peso">
-                    Peso: 250g
-                </p>
-                <p class="preço">
-                    R$40,00
-                </p>
+            <div class="card_produto">
+                <img src="pictures/exemplo_queijo.jpg" class="foto_produto">
+                <div>
+                    <h2 class="nome_produto">
+                        Azeite de Abacate
+                    </h2>
+                    <p class="peso">
+                        Peso: 250g
+                    </p>
+                    <p class="preço">
+                        R$40,00
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class="card_produto">
-            <img src="pictures/exemplo_queijo.jpg" class="foto_produto">
-            <div>
-                <h2 class="nome_produto">
-                    Doce de Leite em Barra
-                </h2>
-                <p class="peso">
-                    Peso: 400g
-                </p>
-                <p class="preço">
-                    R$23,00
-                </p>
+            <div class="card_produto">
+                <img src="pictures/exemplo_queijo.jpg" class="foto_produto">
+                <div>
+                    <h2 class="nome_produto">
+                        Doce de Leite em Barra
+                    </h2>
+                    <p class="peso">
+                        Peso: 400g
+                    </p>
+                    <p class="preço">
+                        R$23,00
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class="card_produto">
-            <img src="pictures/exemplo_queijo.jpg" class="foto_produto">
-            <div>
-                <h2 class="nome_produto">
-                    Manteiga de Garrafa
-                </h2>
-                <p class="peso">
-                    Peso: 275g
-                </p>
-                <p class="preço">
-                    R$30,00
-                </p>
+            <div class="card_produto">
+                <img src="pictures/exemplo_queijo.jpg" class="foto_produto">
+                <div>
+                    <h2 class="nome_produto">
+                        Manteiga de Garrafa
+                    </h2>
+                    <p class="peso">
+                        Peso: 275g
+                    </p>
+                    <p class="preço">
+                        R$30,00
+                    </p>
+                </div>
             </div>
         </div>
-        
     </main>
 </body>
 </html>
