--- a/quejios.html
+++ b/quejios.html
@@ -1,107 +1,82 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cardápio - Queijos</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css" />
     <script defer src="app.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <nav class="nav">
-          <h1 id="title">Cardápio</h1>
-          <button class="hamburger"></button>
-          <ul class="nav-list">
-            <li><a href="index.html">Novidades</a></li>
-            <li><a href="quejios.html">Queijos</a></li>
-            <li><a href="doces.html">Doces</a></li>
-            <li><a href="outros.html">Outros</a></li>
-            <li><a href="https://api.whatsapp.com/send/?phone=5548988080761&text&type=phone_number&app_absent=0" target="_blank" rel="noopener noreferrer">Contato</a></li>
-          </ul>
-        </nav>
-      </header>
+      <nav class="nav">
+        <h1 id="title">Cardápio</h1>
+        <button class="hamburger"></button>
+        <ul class="nav-list">
+          <li><a href="index.html">Novidades</a></li>
+          <li><a href="quejios.html">Queijos</a></li>
+          <li><a href="doces.html">Doces</a></li>
+          <li><a href="outros.html">Outros</a></li>
+          <li>
+            <a
+              href="https://api.whatsapp.com/send/?phone=5548988080761&text&type=phone_number&app_absent=0"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Contato</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main class="hero">
-        <h1 class="tipo_cardapio">
-            Queijos
-        </h1>
+      <h1 class="tipo_cardapio">Queijos</h1>
 
-        <div class="produtos">
-            <div class="card_produto">
-                <img src="pictures/exemplo_queijo.jpg" class="foto_produto">
-                <div>
-                    <h2 class="nome_produto">
-                        Palito Branco
-                    </h2>
-                    <p class="peso">
-                        Peso: 600g
-                    </p>
-                    <p class="preço">
-                        R$35,00
-                    </p>
-                </div>
-            </div>
-
-            <div class="card_produto">
-                <img src="pictures/exemplo_queijo.jpg" class="foto_produto">
-                <div>
-                    <h2 class="nome_produto">
-                        Trança Pura
-                    </h2>
-                    <p class="peso">
-                        Peso: 600g
-                    </p>
-                    <p class="preço">
-                        R$35,00
-                    </p>
-                </div>
-            </div>
-
-            <div class="card_produto">
-                <img src="pictures/exemplo_queijo.jpg" class="foto_produto">
-                <div>
-                    <h2 class="nome_produto">
-                        Provolone Puro
-                    </h2>
-                    <p class="peso">
-                        Peso: 600g
-                    </p>
-                    <p class="preço">
-                        R$35,00
-                    </p>
-                </div>
-            </div>
-
-            <div class="card_produto">
-                <img src="pictures/exemplo_queijo.jpg" class="foto_produto">
-                <div>
-                    <h2 class="nome_produto">
-                        Parmesão Fresco
-                    </h2>
-                    <p class="peso">
-                        Peso: 600g
-                    </p>
-                    <p class="preço">
-                        R$35,00
-                    </p>
-                </div>
-            </div>
-
-            <div class="card_produto">
-                <img src="pictures/exemplo_queijo.jpg" class="foto_produto">
-                <div>
-                    <h2 class="nome_produto">
-                        Manteiga de Garrafa
-                    </h2>
-                    <p class="peso">
-                        Peso: 275g
-                    </p>
-                    <p class="preço">
-                        R$30,00
-                    </p>
-                </div>
-            </div>
+      <div class="produtos">
+        <div class="card_produto">
+          <img src="pictures/exemplo_queijo.jpg" class="foto_produto" />
+          <div>
+            <h2 class="nome_produto">Palito Branco</h2>
+            <p class="peso">Peso: 600g</p>
+            <p class="preço">R$35,00</p>
+          </div>
         </div>
+
+        <div class="card_produto">
+          <img src="assets/Q_Gorgonzola.jpg" class="foto_produto" />
+          <div>
+            <h2 class="nome_produto">Queijo Tipo Gorgonzola</h2>
+            <p class="peso">Aprox: 250g</p>
+            <p class="preço">R$30,00</p>
+          </div>
+        </div>
+
+        <div class="card_produto">
+          <img src="pictures/exemplo_queijo.jpg" class="foto_produto" />
+          <div>
+            <h2 class="nome_produto">Provolone Puro</h2>
+            <p class="peso">Peso: 600g</p>
+            <p class="preço">R$35,00</p>
+          </div>
+        </div>
+
+        <div class="card_produto">
+          <img src="pictures/exemplo_queijo.jpg" class="foto_produto" />
+          <div>
+            <h2 class="nome_produto">Parmesão Fresco</h2>
+            <p class="peso">Peso: 600g</p>
+            <p class="preço">R$35,00</p>
+          </div>
+        </div>
+
+        <div class="card_produto">
+          <img src="pictures/exemplo_queijo.jpg" class="foto_produto" />
+          <div>
+            <h2 class="nome_produto">Manteiga de Garrafa</h2>
+            <p class="peso">Peso: 275g</p>
+            <p class="preço">R$30,00</p>
+          </div>
+        </div>
+      </div>
     </main>
-</body>
+  </body>
 </html>
